<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/journal_list_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.journal.JournalListFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/journalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/journal_page_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="15dp"
        android:paddingHorizontal="15dp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/journalSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/journal_page_subtitle"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/journalTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="15dp" />

    <!-- Divider -->
    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/journalSubtitle"
        app:layout_constraintBottom_toTopOf="@id/journalList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="20dp"
        android:paddingBottom="5dp" />

    <!-- RecyclerView for the list of journal entries -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/journalList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Overlay with a floating action button for adding a journal entry -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addJournal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_journal_entry"
        android:src="@drawable/outline_add_notes_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>